# week10_template

./: CMakeLists.txt  README.md
include/: SafeFileBuffer.hpp  ThreadedAccumulator.hpp  TimedWorkerPool.hpp  async_job_queue.hpp  vector_profiler.hpp
src/: SafeFileBuffer.cpp  ThreadedAccumulator.cpp  TimedWorkerPool.cpp  async_job_queue.cpp  vector_profiler.cpp
tests/: test_SafeFileBuffer.cpp  test_ThreadedAccumulator.cpp  test_TimedWorkerPool.cpp  test_async_job_queue.cpp  test_vector_profiler.cpp
